--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon!</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" href="assets/sm_logo.svg" type="image/svg">
+    <link rel="stylesheet" href="styles/main.css">
 
 </head>
 <body>
+    <header>
+      <img src="assets/logo.svg" alt="logo for Allie Martz">
+      <img class="name" src="assets/nameLogo.svg" alt="Allie Martz name">
+    </header>
     <div class="content">
         <div class="twisted">
           <h1 class="heading">Coming Soon</h1>
@@ -20,6 +25,11 @@
         <div class="site-name">
           <h2>Allie Martz Portfolio</h2>
           <strong>Front-End Developer</strong>
+          <div class="icon-set">
+           <a href="https://github.com/aam198" target="_blank"> <i class="fab fa-github"></i></a>
+           <a href="https://codepen.io/aam198" target="_blank">
+            <i class="fab fa-codepen"></i></a>
+          </div>
         </div>
         
         <div class="footer animate__animated animate__fadeInDown">
