logo_final version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-      <img src="assets/logo.svg" alt="logo for Allie Martz">
+      <img src="assets/logo_1.svg" alt="logo for Allie Martz">
       <img class="name" src="assets/nameLogo.svg" alt="Allie Martz name">
     </header>
     <div class="content">
