--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
   
 
 <!-- <script src="js/custom_ease.js"></script> -->
-<script src="js/index.js"></script>
+<script src="scripts/index.js"></script>
 
 </body>
 </html>
