--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <h1 class = "section-title section-title-intro">Hi, I'm <strong>Allie Martz</strong></h1>
 
     <h2 class="section-subtitle section-subtitle-intro">>_ WEB DEVELOPER</h2>
-    <img src="assets/img/A1.jpg" alt="Allie Martz portfolio picture" class="intro-image">
+    <img src="assets/img/AllieMartz_Main.png" alt="Allie Martz portfolio picture" class="intro-image">
     <p class="intro-body">
-      Currently looking for web development focused position to build functional, usable, and accessible user experiences in the browser. Skilled and experienced in front-end web development and a  fullstack developer in training.</p>
+      Currently looking for web development focused position to build functional, usable, and accessible user experiences in the browser. I have a natural curiosity and a passion for discovery, always seeking to learn more and improve myself.</p>
   </section>
 
 
@@ -69,21 +69,22 @@
       <div class="work-title panel">
         <h3 class="title">Web Developer </h3>
           <ul>
-            <li>Passionate of turning visual designs from concepts and mockups => resuable code for UI components.</li>
-            <li>Creating applications to increase process efficiency and usability in the workplace.</li>
-            <li>Experienced in building websites and SPA applications with such technologies as AWS, Node.js, REST, and web components. Familiar with various frameworks such as Express.js, React, Vue and LitElement.</li>
+            <li>I am a creative web developer looking to provide high-impact web solutions for diverse organizations.</li>
+            <li>I have expertise in converting visual designs, concepts, and mockups into reusable UI components.</li>
+            <li>Building applications to increase process efficiency and usability in the workplace.</li>
+            <li>Experienced in building websites and single page applications with technologies such as HTML/CSS/JavaScript, AWS and Node.js. Familiar with various frameworks such as React, Vue, Express.js, and LitElement.</li>
             <li>Values universal design approach in order to provide the best accessible user experience.</li>
-            <li>Excels in cross-team collaboration environments to develope clean, optimized, and accessible solutions.</li>
+            <li>Excels in cross-team collaboration environments to develop clean, optimized, and accessible solutions.</li>
           </ul>
       </div>  
 
       <div class="work-title panel">
         <h3 class="title">Multimedia Specialist</h3>
         <ul>
-          <li>Visual design creator for World Campus course design boards, graphics, and interactives. </li>
+          <li>I create visual design boards, graphics, and interactives for World Campus courses. </li>
           <li>Research and innovation to develop multimedia components for the education environment.</li> 
           <li>Coordinate various projects related to multimedia technologies development, which may include visualization and imaging projects, application design and implementation.</li>
-          <li>Video Production pre-production planning and consultation with clients, to ensure their message is met. </li>
+          <li>Video production, pre-production planning and consultation with clients, to ensure their message is met. </li>
           <li>Post production video editing utilizing Adobe Premiere, Photoshop, and Audtion to produce quality video.</li>
         </ul>
       </div> 
@@ -95,7 +96,7 @@
           <li>Strong foundation for assessing student facing software applications, building use case scenarios, testing, and providing feedback with security, scalability concerns.</li>
           <li>Experience in various learning education CMS & LMS platform systems.</li>
           <li>Integrate several related client needs to develop appropriate solutions for information delivery and/or learning environments.</li>
-          <li>Interactive component consultation and development based on pedagogical use case.</li>   
+          <li>Interactive component consultation and development based on pedagogical use case.</li>  
         </ul>     
       </div>
     </div>
@@ -118,9 +119,9 @@
     </p>
 
     <div class="about-me-body">
-      <p>I have always had an excitement and understanding of technology. I enjoy developing mini projects/apps, tinkering with the 3D printer, Raspberry Pi, and exploring new gadgets, if that be by building physical models or creating automation processes.</p>
+      <p>I have always had an excitement and understanding of technology. I enjoy developing mini web based projects/apps, tinkering with the 3D printer, Raspberry Pi, and exploring new gadgets.</p>
     
-      <p>Outside of work, I enjoy the outdoors, avid trail runner/road runner, internationally certified LesMills instructor at a local gym. </p>
+      <p>Outside of work, I like to spend time outdoors. I'm an avid trail and road runner, a gravel biker, and an internationally certified LesMills fitness instructor. </p>
     </div>
 
     <img src="assets/img/AllieMartz.jpg" alt="Allie Martz" class="about-me-img">
