--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <h3 class="title">Web Developer </h3>
           <ul>
             <li>I am a creative web developer looking to provide high-impact web solutions for diverse organizations.</li>
-            <li>I have expertise in converting visual designs, concepts, and mockups into reusable UI components.</li>
-            <li>Building applications to increase process efficiency and usability in the workplace.</li>
+            <li>Expertise in converting visual designs, concepts, and mockups into reusable UI components.</li>
+            <li>Building web applications to increase process efficiency and usability in the workplace.</li>
             <li>Experienced in building websites and single page applications with technologies such as HTML/CSS/JavaScript, AWS and Node.js. Familiar with various frameworks such as React, Vue, Express.js, and LitElement.</li>
             <li>Values universal design approach in order to provide the best accessible user experience.</li>
             <li>Excels in cross-team collaboration environments to develop clean, optimized, and accessible solutions.</li>
@@ -81,9 +81,9 @@
       <div class="work-title panel">
         <h3 class="title">Multimedia Specialist</h3>
         <ul>
-          <li>I create visual design boards, graphics, and interactives for World Campus courses. </li>
           <li>Research and innovation to develop multimedia components for the education environment.</li> 
-          <li>Coordinate various projects related to multimedia technologies development, which may include visualization and imaging projects, application design and implementation.</li>
+          <li>Create visual design boards, graphics, and interactives for World Campus courses. </li>
+          <li>Coordinate various projects related to multimedia development, which may include visualization and imaging projects, application design and implementation.</li>
           <li>Video production, pre-production planning and consultation with clients, to ensure their message is met. </li>
           <li>Post production video editing utilizing Adobe Premiere, Photoshop, and Audtion to produce quality video.</li>
         </ul>
